# gerenciador_psicologia

./: .flaskenv  README.md  alter_db.py  pyproject.toml  requirements.txt  reset_db.py  run.py  seed.py
gerenciador_psicologia/: __init__.py  app.py  main.py  models.py
gerenciador_psicologia/routes/: appointments.py  dashboard.py  financial.py  patients.py
gerenciador_psicologia/services/: appointment_service.py  financial_service.py  patient_service.py
gerenciador_psicologia/static/assets/css/: custom.css
gerenciador_psicologia/static/css/: calendar.css  custom.css
gerenciador_psicologia/static/js/: calendar.js  main.js
gerenciador_psicologia/templates/: base.html
gerenciador_psicologia/templates/appointments/: detail.html  form.html  list.html
gerenciador_psicologia/templates/dashboard/: index.html
gerenciador_psicologia/templates/financial/: payment_detail.html  payment_form.html  payments_list.html
gerenciador_psicologia/templates/includes/: configurator.html  head.html  navigation.html  scripts.html  sidebar.html
gerenciador_psicologia/templates/patients/: create.html  edit.html  list.html
migrations/versions/: 39e64ff40b78_manually_recreate_appointment_status_.py  5030cdc12c31_change_payment_date_to_date_type.py  ca4f0f1d115c_refactor_models_and_add_indexes.py  d033dda8c130_remove_payment_method_from_payment_model.py  d033dda8c131_make_patient_id_nullable.py  f2ffd97800c3_add_status_to_appointments_and_link_.py
tests/: test_appointments.py  test_financial.py  test_patients.py
